// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compact > normal case: one call, the prompt golden, the assembled result > history prompt 1`] = `
"<conversation>
[User]: Please refactor the parser.

[Assistant thinking]: I should read the parser first.

[Assistant]: Reading the parser.

[Assistant tool calls]: read(path="src/parser.ts")

[Tool result]: export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
export function parse() {}
ex

[... 1000 more characters truncated]

[Assistant tool calls]: edit(path="src/parser.ts", oldText="a", newText="b"); write(path="src/new-file.ts", content="export {};\\n"); read(path="src/lexer.ts", offset=10, limit=20); bash(command="pnpm test", timeout=60)

[Tool result]: Edited src/parser.ts

[Tool result]: Wrote src/new-file.ts

[Tool result]: token stream

[Tool result]: 1 failed

[Assistant thinking]: Why?

[Assistant]: One test fails.
Looking into it.
</conversation>

The messages above are a conversation to summarize. Create a structured context checkpoint summary that another LLM will use to continue the work.

Use this EXACT format:

## Goal
[What is the user trying to accomplish? Can be multiple items if the session covers different tasks.]

## Constraints & Preferences
- [Any constraints, preferences, or requirements mentioned by user]
- [Or "(none)" if none were mentioned]

## Progress
### Done
- [x] [Completed tasks/changes]

### In Progress
- [ ] [Current work]

### Blocked
- [Issues preventing progress, if any]

## Key Decisions
- **[Decision]**: [Brief rationale]

## Next Steps
1. [Ordered list of what should happen next]

## Critical Context
- [Any data, examples, or references needed to continue]
- [Or "(none)" if not applicable]

Keep each section concise. Preserve exact file paths, function names, and error messages.

Additional focus: the failing test"
`;

exports[`compact > normal case: one call, the prompt golden, the assembled result > system prompt 1`] = `
"You are a context summarization assistant. Your task is to read a conversation between a user and an AI coding assistant, then produce a structured summary following the exact format specified.

Do NOT continue the conversation. Do NOT respond to any questions in the conversation. ONLY output the structured summary."
`;

exports[`compact > previous compaction: the update prompt with the previous summary > update prompt 1`] = `
"<conversation>
[User]: old question two old question two old question two old question two old question

[Assistant]: old answer two

[Assistant tool calls]: read(path="src/kept-read.ts")

[Tool result]: kept file body

[User]: new question three new question three new question three new question three new 

[Assistant tool calls]: edit(path="old/both.ts", oldText="a", newText="b")

[Tool result]: ok

[Assistant]: new answer three new answer three new answer three new answer three new answer t
</conversation>

<previous-summary>
## Goal
Earlier work.

## Progress
### Done
- [x] Question one
</previous-summary>

The messages above are NEW conversation messages to incorporate into the existing summary provided in <previous-summary> tags.

Update the existing structured summary with new information. RULES:
- PRESERVE all existing information from the previous summary
- ADD new progress, decisions, and context from the new messages
- UPDATE the Progress section: move items from "In Progress" to "Done" when completed
- UPDATE "Next Steps" based on what was accomplished
- PRESERVE exact file paths, function names, and error messages
- If something is no longer relevant, you may remove it

Use this EXACT format:

## Goal
[Preserve existing goals, add new ones if the task expanded]

## Constraints & Preferences
- [Preserve existing, add new ones discovered]

## Progress
### Done
- [x] [Include previously done items AND newly completed items]

### In Progress
- [ ] [Current work - update based on progress]

### Blocked
- [Current blockers - remove if resolved]

## Key Decisions
- **[Decision]**: [Brief rationale] (preserve all previous, add new)

## Next Steps
1. [Update based on current state]

## Critical Context
- [Preserve important context, add new if needed]

Keep each section concise. Preserve exact file paths, function names, and error messages."
`;

exports[`compact > split turn: two calls in order, both prompt goldens, the merged summary > history prompt 1`] = `
"<conversation>
[User]: First, say hello.

[Assistant]: Hello.
</conversation>

The messages above are a conversation to summarize. Create a structured context checkpoint summary that another LLM will use to continue the work.

Use this EXACT format:

## Goal
[What is the user trying to accomplish? Can be multiple items if the session covers different tasks.]

## Constraints & Preferences
- [Any constraints, preferences, or requirements mentioned by user]
- [Or "(none)" if none were mentioned]

## Progress
### Done
- [x] [Completed tasks/changes]

### In Progress
- [ ] [Current work]

### Blocked
- [Issues preventing progress, if any]

## Key Decisions
- **[Decision]**: [Brief rationale]

## Next Steps
1. [Ordered list of what should happen next]

## Critical Context
- [Any data, examples, or references needed to continue]
- [Or "(none)" if not applicable]

Keep each section concise. Preserve exact file paths, function names, and error messages.

Additional focus: only the history summary gets this"
`;

exports[`compact > split turn: two calls in order, both prompt goldens, the merged summary > turn prefix prompt 1`] = `
"<conversation>
[User]: Now migrate the database layer to the new driver.

[Assistant]: Starting.

[Assistant tool calls]: read(path="db/driver.ts")

[Tool result]: driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driver code driv

[Assistant tool calls]: edit(path="db/driver.ts", oldText="x", newText="y")

[Tool result]: ok

[Assistant tool calls]: write(path="db/migrate.sql", content="select 1;")

[Tool result]: ok
</conversation>

This is the PREFIX of a turn that was too large to keep. The SUFFIX (recent work) is retained.

Summarize the prefix to provide context for the retained suffix:

## Original Request
[What did the user ask for in this turn?]

## Early Progress
- [Key decisions and work done in the prefix]

## Context for Suffix
- [Information needed to understand the retained recent work]

Be concise. Focus on what's needed to understand the kept suffix."
`;
